--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
-		<a href="/"><img id=logo src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Zuurix.com%20logo.png" alt="Zuurix.com"></a>
+		<a href="/"><img id=logo src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/cae16393406042fef792fa26dc68929ef5ba5e55/images/miscellaneous/Website%20logo%202.png" alt="Zuurix.com"></a>
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
