--- a/css/main.css
+++ b/css/main.css
@@ -33,8 +33,8 @@ nav li a {
 }
 
 nav li a:hover {
-    background-color: #800000;
-    color: #d9d9d9;
+    background-color: #000000;
+    color: #c34d45;
     text-decoration: none;
 }
 
