--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ nav li a {
 
 nav li a:hover {
     background-color: #000000;
-    color: #c34d45;
+    color: #fff366;
     text-decoration: none;
 }
 
@@ -72,7 +72,7 @@ h1 {
     vertical-align: middle;
     padding: 32px 16px 32px 32px;
     color: #000000;
-    background-color: #FFF366;
+    background-color: #fff366;
     margin: 0px 0px 0px 0px;
 }
 
