--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ nav li a:hover {
 }
 
 nav li a:active {
-    background-color: #fff366;
+    background-color: #c34d45;
     color: #000000;
     text-decoration: none;
 }
