--- a/css/main.css
+++ b/css/main.css
@@ -71,8 +71,8 @@ h1 {
     font-size: 2em;
     vertical-align: middle;
     padding: 32px 16px 32px 32px;
-    color: #000000;
-    background-color: #fff366;
+    color: #fff366;
+    background-color: #000000;
     margin: 0px 0px 0px 0px;
 }
 
