--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ nav li a:active {
 a {
     font-family: 'Nunito', sans-serif;
     text-decoration: none;
-    color: #c34d45;
+    color: #61241f;
 }
 
 a ul li {
