--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ a ul li {
 }
 
 a:hover {
-    font-weight: bold;
+    text-decoration: none;
 }
 
 /*Page header*/
@@ -106,11 +106,6 @@ p {
     color: #000000;
     padding: 8px 8px 8px 8px;
     margin: 12px 12px 12px 12px;
-}
-
-a:hover {
-    text-decoration: underline;
-}
 }
 
 footer {
