--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 			
 		</div><!-- /.container -->
 		<footer>
-			<a href="#top">Back to the top</a>
+			<a href="#top">▲ Back to the top</a>
 		</footer>
 	</body>
 </html>
