--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 		<title>{{ page.title }}</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
-		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 	</head>
 	<body>
 		<a href="/"><img id=logo src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Website%20logo%202.png" alt="Zuurix.com"></a>
