--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 
+html {
+  min-width: 100%;
+  min-height: 100%;
+}
+
 body {
     font-family: 'Nunito', sans-serif;
     margin: 60px auto;
