--- a/css/main.css
+++ b/css/main.css
@@ -61,11 +61,7 @@ a ul li {
 }
 
 a:hover {
-    text-decoration: none;
-}
-
-ul li a:hover {
-    text-weight: bold;
+    text-decoration: underline;
 }
 
 /*Page header*/
