--- a/css/main.css
+++ b/css/main.css
@@ -64,6 +64,27 @@ a:hover {
     color: #c34d45;
 }
 
+/* Centered text */
+
+c {
+    text-align: center;
+    font-family: 'Nunito', sans-serif;
+    text-decoration: none;
+    color: #61241f;
+}
+
+c ul li {
+    font-family: 'Nunito', sans-serif;
+    font-size: 1.3em;
+    color: #800000;
+    padding: 8px 8px 8px 8px;
+    margin: 12px 12px 12px 12px;
+}
+
+c:hover {
+    color: #c34d45;
+}
+
 /*Page header*/
 
 h1 {
