--- a/css/main.css
+++ b/css/main.css
@@ -97,11 +97,7 @@ h2 {
 /*Game genre*/
 
 h3 {
-    font-family: 'Nunito', sans-serif;
-    font-size: 1em;
-    vertical-align: middle;
-    padding: 8px 8px 8px 8px;
-    margin: 0px 0px 0px 0px;  
+    text-align: center;
 }
 
 /* Text */
