--- a/css/main.css
+++ b/css/main.css
@@ -98,6 +98,11 @@ h2 {
 
 h3 {
     text-align: center;
+    font-family: 'Nunito', sans-serif;
+    font-size: 1.3em;
+    color: #000000;
+    padding: 8px 8px 8px 8px;
+    margin: 12px 12px 12px 12px;
 }
 
 /* Text */
