--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
 		</div><!-- /.container -->
 		<footer>
 			<a href="#top">▲ Back to the top</a>
+			<p class="center-universal">© Copyright 2016-2019 Aivaras Klimas</>
 		</footer>
 	</body>
 </html>
