--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 		</div><!-- /.container -->
 		<footer>
 			<a href="#top">▲ Back to the top</a>
-			<a style="text-align:center;">© Copyright 2016-2019 Aivaras Klimas</a>
+			<p style="text-align:center;">© Copyright 2016-2019 Aivaras Klimas</p>
 		</footer>
 	</body>
 </html>
