--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,8 @@
 		</div><!-- /.container -->
 		<footer>
 			<a href="#top">▲ Back to the top</a>
-			<p style="text-align:center;">© Copyright 2016-2019 Aivaras Klimas</p>
 		</footer>
+		
+		<a style="text-align:center;">© Copyright 2016-2019 Aivaras Klimas</a>
 	</body>
 </html>
