--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,6 @@
 			<a href="#top">▲ Back to the top</a>
 		</footer>
 		
-		<a style="text-align:center;">© Copyright 2016-2019 Aivaras Klimas</a>
+		<p style="text-align:center;">© Copyright 2016-2019 Aivaras Klimas</p>
 	</body>
 </html>
