--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 		<a href="/"><img id=logo src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Website%20logo%202.png" alt="Zuurix.com"></a>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
+        		<li><a href="/">Games</a></li>
 			<li><a href="/blog">Blog</a></li>
 			<li><a href="/community">Community</a></li>
 	        	<li><a href="/about">About</a></li>
