--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ nav ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #c34d45;
+    background-color: #e051be;
 }
 
 nav li {
@@ -40,7 +40,7 @@ nav li a:hover {
 
 nav li a:active {
     background-color: #fff366;
-    color: #c34d45;
+    color: #e051be;
     text-decoration: none;
 }
 
@@ -61,7 +61,7 @@ a ul li {
 }
 
 a:hover {
-    color: #c34d45;
+    color: #e051be;
 }
 
 /*Page header*/
@@ -117,7 +117,7 @@ footer {
 }
 
 footer a {
-    background-color: #c34d45;
+    background-color: #e051be;
     display: block;
     color: white;
     padding: 14px 16px;
@@ -135,7 +135,7 @@ footer a:hover {
 footer a:active {
     display: block;
     background-color: #fff366;
-    color: #c34d45;
+    color: #e051be;
     padding: 14px 16px;
     text-decoration: none;
 }
@@ -149,7 +149,7 @@ comments {
 }
 
 comments a {
-    background-color: #c34d45;
+    background-color: #e051be;
     display: block;
     color: white;
     padding: 14px 16px;
@@ -157,7 +157,7 @@ comments a {
 }
 
 comments a:hover {
-    background-color: #c34d45;
+    background-color: #e051be;
     display: block;
     color: white;
     padding: 14px 16px;
@@ -165,7 +165,7 @@ comments a:hover {
 }
 
 comments a:active {
-    background-color: #c34d45;
+    background-color: #e051be;
     display: block;
     color: white;
     padding: 14px 16px;
@@ -178,7 +178,7 @@ ul.posts {
     font-family: 'Nunito', sans-serif;
     list-style: none;
     font-size: 1.3em;
-    color: #c34d45;
+    color: #e051be;
     padding: 8px 8px 8px 8px;
     margin: 12px 12px 12px 12px;
 }
@@ -187,7 +187,7 @@ ul.posts li {
     font-family: 'Nunito', sans-serif;
     list-style: none;
     font-size: 1.3em;
-    color: #c34d45;
+    color: #e051be;
     padding: 8px 8px 8px 8px;
     margin: 12px 12px 12px 12px;
 }
@@ -195,7 +195,7 @@ ul.posts li {
 /*Button*/
 
 .myButton {
-    background-color: #c34d45;
+    background-color: #e051be;
     color: white;
     display:inline-block;
     cursor:pointer;
@@ -219,7 +219,7 @@ ul.posts li {
 .myButton:active {
     cursor:pointer;
     text-decoration:none;
-    color: #c34d45;
+    color: #e051be;
     padding: 8px 8px 8px 8px;
     margin: 12px 12px 12px 12px;
 }
@@ -241,7 +241,7 @@ height:143px
 /*Space box*/
 
 space a {
-    background-color: #c34d45;
+    background-color: #e051be;
     display: block;
     color: white;
     padding: 14px 16px;
@@ -252,7 +252,7 @@ space a {
 /*Space box*/
 
 mini-space a {
-    background-color: #c34d45;
+    background-color: #e051be;
     display: block;
     color: white;
     padding: 6px 16px;
@@ -263,7 +263,7 @@ mini-space a {
 /*Space box*/
 
 micro-space a {
-    background-color: #c34d45;
+    background-color: #e051be;
     display: block;
     color: white;
     padding: 6px 8px;
